# LocalMind

./: .editorconfig  .gitignore  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  SECURITY_COMPLIANCE.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  build_log.txt  build_log_stacktrace.txt  debug_runner.ps1  extract_docx.ps1  fix_icon.py  gradle.properties  gradlew  gradlew.bat  live_log_latest.txt  run_release.ps1  settings.gradle.kts  setup-gradle.ps1  status.txt  translate_strings.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: android-ci.yml
app/: build.gradle.kts  proguard-rules.pro  release.keystore.old_backup
app/src/main/: AndroidManifest.xml  baseline-prof.txt
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/cpp/llama.cpp/common/jinja/: caps.cpp  caps.h  value.h
app/src/main/cpp/llama.cpp/docs/: function-calling.md
app/src/main/cpp/llama.cpp/tools/server/public/_app/: version.json
app/src/main/cpp/llama.cpp/tools/server/public/_app/immutable/: bundle.DSTgeEkt.js
app/src/main/cpp/llama.cpp/tools/server/public/_app/immutable/assets/: style.DXqLu93h.css  style.eK-nbzvn.css
app/src/main/cpp/llama.cpp/tools/server/webui/: netlify.toml  package-lock.json
app/src/main/java/com/localmind/app/: LocalMindApplication.kt  MainActivity.kt
app/src/main/java/com/localmind/app/core/: Constants.kt
app/src/main/java/com/localmind/app/core/di/: DatabaseModule.kt  LLMModule.kt  NetworkModule.kt  PreferencesModule.kt  RepositoryModule.kt
app/src/main/java/com/localmind/app/core/engine/: ModelMetadata.kt  PerfMetrics.kt
app/src/main/java/com/localmind/app/core/performance/: DeviceProfileManager.kt  MemoryEstimator.kt  SafeCacheManager.kt
app/src/main/java/com/localmind/app/core/rollout/: FeatureRolloutConfig.kt
app/src/main/java/com/localmind/app/core/security/: SecureStorageManager.kt
app/src/main/java/com/localmind/app/core/storage/: InternalModelStorageManager.kt  ModelStorageType.kt  PersistentModelStorageManager.kt  StorageAdmissionManager.kt
app/src/main/java/com/localmind/app/core/utils/: BiometricHelper.kt  ConversationTitleGenerator.kt  DocumentHelper.kt  GpuCapabilityChecker.kt  HardwareMonitor.kt  NetworkUtils.kt  QuickReloadManager.kt  Result.kt  STTHelper.kt  SecureLogger.kt  StorageUtils.kt  UiState.kt
app/src/main/java/com/localmind/app/data/local/: LocalMindDatabase.kt
app/src/main/java/com/localmind/app/data/mapper/: ConversationMapper.kt  MessageMapper.kt  ModelMapper.kt
app/src/main/java/com/localmind/app/data/remote/: HfAuthHeaderInterceptor.kt  HuggingFaceApi.kt  HuggingFaceModels.kt  RemoteInferenceApi.kt
app/src/main/java/com/localmind/app/data/repository/: ChatRepository.kt  DownloadOrchestrator.kt  HuggingFaceRepository.kt  ModelCatalogExtensions.kt  ModelCatalogRepository.kt  ModelRepository.kt  PersonaRepository.kt  SettingsRepository.kt
app/src/main/java/com/localmind/app/domain/model/: CompatibilityMode.kt  Message.kt  (+13 more)
app/src/main/java/com/localmind/app/llm/: ActivationOptions.kt  ChatInferenceEngine.kt  HybridInferenceRouter.kt  InferenceConfig.kt  InferenceErrorMapper.kt  InferenceRouteHint.kt  InferenceTelemetry.kt  LLMEngine.kt  LocalInferenceEngine.kt  ModelLifecycleManager.kt  ModelRunTargetResolver.kt  RemoteInferenceEngine.kt
app/src/main/java/com/localmind/app/navigation/: NavGraph.kt
app/src/main/java/com/localmind/app/receiver/: DownloadActionReceiver.kt
app/src/main/java/com/localmind/app/service/: LLMService.kt
app/src/main/java/com/localmind/app/worker/: DownloadModelWorker.kt
app/src/main/res/drawable/: ic_launcher_background_neon.xml  ic_launcher_empty_foreground.xml  ic_launcher_foreground_neon.xml  ic_stat_localmind.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml  network_security_config.xml
scripts/playwright/: README.md  run-playwright-workflow.ps1  workflow.example.json  workflow.freelancer-google-prefill.json
web-game/: game.js  index.html
web-game/actions/: fullscreen-on.json  lose-idle.json  pause-fullscreen.json  pause-only.json  restart-after-win.json  smoke.json  start-idle.json  win-path.json
(+76 files in other folders)
